Fix padding for store select bar on mobiles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3826,6 +3826,10 @@ a.ui-button:active,
   .store__products .search__select {
     min-width: 100%;
   }
+
+  .store__products .search__select {
+    padding-top: 0;
+  }
 }
 
 @media all and (max-width: 461px) {
